gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23491.d
version https://git-lfs.github.com/spec/v1
oid sha256:cac9ac149b15ad7f798e5b17b4c5bd17fe02970964998d9e4ae029dff2b68721
size 650
